<resources>
    <plurals name="library_contains_x_books">
        <item quantity="one">Library %1$s contains %2$d book</item>
        <item quantity="other">Library %1$s contains %2$d books</item>
    </plurals>
    <string name="app_name">ELibrary</string>
    <string name="app_title">ELibrary</string>
    <string name="app_subtitle">Managing your ebook collection</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <string name="action_clear_db">Clear DB</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_book_library">BookLibrary</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="dashboard_books_list_library_refresh">Refresh</string>
    <string name="filetype_picker_dialog_epub">EPUB</string>
    <string name="filetype_picker_dialog_pdf">PDF</string>
    <string name="filetype_picker_dialog_mobi">MOBI</string>
    <string name="filetype_picker_dialog_text">TEXT</string>
    <string name="filetype_picker_dialog_btn">Done</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_book_add_tag">Add Tag</string>
    <string name="action_book_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_book_show_details">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rescan_progress_msg">Scanning %1$s : Book %2$d of %3$d</string>
    <string name="application_not_available">Application not available</string>
    <string name="copied_file_name">Copy of %s</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="copied_file_name_2">Copy %1$d of %2$s</string>

    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>

    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>

    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_libraries">Libraries</string>


    <string name="pref_header_data_sync">Data &amp; sync</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="clipboard_path_copy">Copy</string>

    <!-- Example settings for Notifications -->
    <string name="storage">Storage</string>

    <string name="rootdirectory">Root Dir</string>

    <string name="extstorage">Ext Storage</string>
    <string name="title_activity_book_lib_search">BookLibSearchActivity</string>

    <string name="title_activity_book_lib_book_details">BookLibBookDetailsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_checkDb">Check DB</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
</resources>
