<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_book_show_details"
        android:icon="@drawable/ic_description_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_book_show_details"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_book_add_tag"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_book_add_tag"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_book_delete"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_book_delete"
        app:showAsAction="ifRoom"/>

</menu>
